--- a/about/index.html
+++ b/about/index.html
@@ -250,7 +250,7 @@
 
 
 <script>
-    $('.bg-cover').css('background-image', 'url(https://codechina.csdn.net/CALch/medias/-/raw/master/banner/0.jpg?inline=false)');
+    $('.bg-cover').css('background-image', 'url(https://gitcode.net/CALch/medias/-/raw/master/banner/0.jpg?inline=false)');
 </script>
 
 
